--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,14 +23,15 @@
 		"vscode": {
 			"extensions": [
 				"mhutchie.git-graph",
-				"eamodio.gitlens"
+				"eamodio.gitlens",
+				"keesschollaart.vscode-home-assistant"
 			]
 		}
 	},
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "git config --global --add safe.directory /workspaces/remote-homeassistant' & apt update && apt full-upgrade -y && apt autoremove --purge -y",
+	"postCreateCommand": "git config --global --add safe.directory /workspaces/remote-homeassistant & apt update && apt full-upgrade -y && apt autoremove --purge -y",
 	// Configure tool-specific properties.
 	// "customizations": {},
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
